--- a/exercises/ex1/koch.html
+++ b/exercises/ex1/koch.html
@@ -64,6 +64,7 @@
 
     const snowflake = (start, sideLen, iterations, anti) => {
       // TODO: FILL IN THIS FUNCTION
+      // you might need to define a helper function to handle the recursive step
     };
 
     const makeSnowflake = (params) => {
