--- a/exercises/ex3/sierpinski.html
+++ b/exercises/ex3/sierpinski.html
@@ -64,12 +64,15 @@
       _makeGeometry() {
         const geom = new THREE.Geometry();
         this.BASE_VERTICES.map((v) => geom.vertices.push(v));
-        geom.faces.push(new THREE.Face3(0, 1, 2));
-        geom.faces.push(new THREE.Face3(0, 1, 3));
-        geom.faces.push(new THREE.Face3(1, 3, 2));
-        geom.faces.push(new THREE.Face3(3, 0, 2));
-        geom.scale(this.length, this.length, this.length);
-        geom.translate(this.pos.x, this.pos.y, this.pos.z);
+        // TODO: FILL IN
+        // given the list of BASE_VERTICES, add 4 faces corresponding
+        // to the 4 sides of a tetrahedron. Remember to define the
+        // 3 vertices of the faces in CCW order.
+
+        // now scale geom by this.length to make the tetrahedron
+        // the right size
+
+        // finally, move it to the appropriate position
         return geom;
       }
       verts() {
@@ -79,62 +82,13 @@
         return this.geom.clone();
       }
     }
-    class Gasket {
-      constructor(clr) {
-        this._origin = new THREE.Vector3(0, 0, 0);
-        this.fr = new THREE.Object3D();
-        // make it so frame points in pos y direction
-        this.fr.rotation.x = -Math.PI / 2;
-        this.clr = clr;
-      }
-      _updateFrame(mesh) {
-        this.fr = this.fr.clone().add(mesh);
-      }
-      frame() {
-        return this.fr.clone();
-      }
-      addThd(length, pos) {
-        // add tetrahedron object with side length = length
-        const geom = new TetrahedronGeometry(length, pos).geometry();
+    // TODO: ADD YOUR GASKET-GENERATING CODE HERE!
 
-        // add materials to the geometry
-        var colors = geom.faces.map((face, idx) => {
-          face.materialIndex = idx;
-          return new THREE.MeshPhongMaterial({
-            color: this.clr,
-            specular: 0xffc0cb, // sky blue
-            flatShading: THREE.FlatShading,
-            transparent: true,
-            opacity: 0.65,
-            side: THREE.DoubleSide,
-          });
-        });
-        // add mesh to frame
-        this._updateFrame(new THREE.Mesh(geom, colors));
-        return geom.vertices;
-      }
-      sierpinski = (length, n, pos) => {
-        let verts = new TetrahedronGeometry(length / 2, pos).verts();
-        if (n === 1) {
-          return this.addThd(length, pos);
-        }
-        // recursive step
-        verts.map((v) => this.sierpinski(length / 2, n - 1, v));
+    // Add all of your generated objects to a THREE.Object3D()
+    // and return your frame once you are finished!
+    let sierp = new THREE.Object3D(); // just a placeholder :)
 
-        return verts;
-      };
-    }
-
-    const makeSierpinski = (params) => {
-      const gas = new Gasket("#34a4eb");
-      gas.sierpinski(
-        params.sideLength,
-        params.iterations,
-        new THREE.Vector3(0, 0, 0)
-      );
-      return gas.frame();
-    };
-
+    // END OF GASKET-GENERATING CODE
     // ================================================================
     // SETUP
     let lastDepth = 4;
@@ -192,7 +146,6 @@
     }
 
     state.render();
-    // rebuild();
     // set up sliders to control the dimensions of the box
     var gui = new dat.GUI();
     gui.add(default_params, "iterations", 1, 7).onChange(rebuild);
