finished ex4 instructions

--- a/exercises/ex4/raymarching.html
+++ b/exercises/ex4/raymarching.html
@@ -25,6 +25,8 @@
   </head>
   <body></body>
   <script>
+    // js code in this file was adapted from
+    // https://github.com/nicoptere/raymarching-for-THREE
     var tl = new THREE.TextureLoader();
     var cl = new THREE.CubeTextureLoader();
     var rc = new THREE.Raycaster();
